// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22 -m forgeops": should export the saml based on salm-config.json file in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22 -m forgeops": should export the saml based on salm-config.json file in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22 -m forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir22/realms/alpha/realm-config/saml/COT/Cloud2ForgeOps.json 1`] = `
{
  "_id": "Cloud2ForgeOps",
  "_rev": "1091112919",
  "_type": {
    "_id": "circlesoftrust",
    "collection": true,
    "name": "Circle of Trust",
  },
  "status": "active",
  "trustedProviders": [
    "test-remote-idp-saml|saml2",
    "test-hosted-sp-saml|saml2",
  ],
}
`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22 -m forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir22/realms/alpha/realm-config/saml/COT/ForgeOps2Cloud.json 1`] = `
{
  "_id": "ForgeOps2Cloud",
  "_rev": "1119518363",
  "_type": {
    "_id": "circlesoftrust",
    "collection": true,
    "name": "Circle of Trust",
  },
  "status": "active",
  "trustedProviders": [
    "test-remote-sp-saml|saml2",
    "test-hosted-idp-saml|saml2",
  ],
}
`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22 -m forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir22/realms/alpha/realm-config/saml/hosted/testIDP_SAML.json 1`] = `
{
  "config": {
    "_id": "dGVzdC1ob3N0ZWQtaWRwLXNhbWw",
    "_rev": "-187419486",
    "entityId": "test-hosted-idp-saml",
    "identityProvider": {
      "advanced": {
        "ecpConfiguration": {
          "idpSessionMapper": "com.sun.identity.saml2.plugins.DefaultIDPECPSessionMapper",
        },
        "idpAdapter": {
          "idpAdapterScript": "[Empty]",
        },
        "idpFinderImplementation": {},
        "relayStateUrlList": {},
        "saeConfiguration": {
          "idpUrl": "https://platform.dev.trivir.com/am/idpsaehandler/metaAlias/test_1",
        },
        "sessionSynchronization": {},
      },
      "assertionContent": {
        "assertionCache": {},
        "assertionTime": {
          "effectiveTime": 600,
          "notBeforeTimeSkew": 600,
        },
        "authenticationContext": {
          "authContextItems": [
            {
              "contextReference": "urn:oasis:names:tc:SAML:2.0:ac:classes:PasswordProtectedTransport",
              "level": 0,
            },
          ],
          "authenticationContextMapper": "com.sun.identity.saml2.plugins.DefaultIDPAuthnContextMapper",
        },
        "basicAuthentication": {},
        "nameIdFormat": {
          "nameIdFormatList": [
            "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName",
          ],
          "nameIdValueMap": [
            {
              "binary": false,
              "key": "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
              "value": "mail",
            },
          ],
        },
        "signingAndEncryption": {
          "encryption": {},
          "requestResponseSigning": {},
          "secretIdAndAlgorithms": {},
        },
      },
      "assertionProcessing": {
        "accountMapper": {
          "accountMapper": "com.sun.identity.saml2.plugins.DefaultIDPAccountMapper",
          "disableNameIdPersistence": false,
        },
        "attributeMapper": {
          "attributeMapper": "com.sun.identity.saml2.plugins.DefaultIDPAttributeMapper",
          "attributeMapperScript": "c4f22465-2368-4e27-8013-e6399974fd48",
        },
        "localConfiguration": {},
      },
      "services": {
        "assertionIdRequest": [
          {
            "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
            "location": "https://platform.dev.trivir.com/am/AIDReqSoap/IDPRole/metaAlias/test_1",
          },
          {
            "binding": "urn:oasis:names:tc:SAML:2.0:bindings:URI",
            "location": "https://platform.dev.trivir.com/am/AIDReqUri/IDPRole/metaAlias/test_1",
          },
        ],
        "metaAlias": "/test_1",
        "nameIdMapping": [
          {
            "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
            "location": "https://platform.dev.trivir.com/am/NIMSoap/metaAlias/test_1",
          },
        ],
        "serviceAttributes": {
          "artifactResolutionService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/ArtifactResolver/metaAlias/test_1",
            },
          ],
          "nameIdService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://platform.dev.trivir.com/am/IDPMniRedirect/metaAlias/test_1",
              "responseLocation": "https://platform.dev.trivir.com/am/IDPMniRedirect/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://platform.dev.trivir.com/am/IDPMniPOST/metaAlias/test_1",
              "responseLocation": "https://platform.dev.trivir.com/am/IDPMniPOST/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/IDPMniSoap/metaAlias/test_1",
            },
          ],
          "singleLogoutService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://platform.dev.trivir.com/am/IDPSloRedirect/metaAlias/test_1",
              "responseLocation": "https://platform.dev.trivir.com/am/IDPSloRedirect/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://platform.dev.trivir.com/am/IDPSloPOST/metaAlias/test_1",
              "responseLocation": "https://platform.dev.trivir.com/am/IDPSloPOST/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/IDPSloSoap/metaAlias/test_1",
            },
          ],
          "singleSignOnService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://platform.dev.trivir.com/am/SSORedirect/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://platform.dev.trivir.com/am/SSOPOST/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/SSOSoap/metaAlias/test_1",
            },
          ],
        },
      },
    },
  },
  "metadata": "<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<EntityDescriptor entityID="test-hosted-idp-saml" xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:query="urn:oasis:names:tc:SAML:metadata:ext:query" xmlns:mdattr="urn:oasis:names:tc:SAML:metadata:attribute" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" xmlns:xenc11="http://www.w3.org/2009/xmlenc11#" xmlns:alg="urn:oasis:names:tc:SAML:metadata:algsupport" xmlns:x509qry="urn:oasis:names:tc:SAML:metadata:X509:query" xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
    <IDPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol">
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <KeyDescriptor use="encryption">
            <ds:KeyInfo>
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p">
                <ds:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
            </EncryptionMethod>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc">
                <xenc:KeySize>128</xenc:KeySize>
            </EncryptionMethod>
        </KeyDescriptor>
        <ArtifactResolutionService index="0" Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/ArtifactResolver/metaAlias/test_1"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://platform.dev.trivir.com/am/IDPSloRedirect/metaAlias/test_1" ResponseLocation="https://platform.dev.trivir.com/am/IDPSloRedirect/metaAlias/test_1"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/IDPSloPOST/metaAlias/test_1" ResponseLocation="https://platform.dev.trivir.com/am/IDPSloPOST/metaAlias/test_1"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/IDPSloSoap/metaAlias/test_1"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://platform.dev.trivir.com/am/IDPMniRedirect/metaAlias/test_1" ResponseLocation="https://platform.dev.trivir.com/am/IDPMniRedirect/metaAlias/test_1"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/IDPMniPOST/metaAlias/test_1" ResponseLocation="https://platform.dev.trivir.com/am/IDPMniPOST/metaAlias/test_1"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/IDPMniSoap/metaAlias/test_1"/>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:persistent</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIDFormat>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://platform.dev.trivir.com/am/SSORedirect/metaAlias/test_1"/>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/SSOPOST/metaAlias/test_1"/>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/SSOSoap/metaAlias/test_1"/>
        <NameIDMappingService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/NIMSoap/metaAlias/test_1"/>
        <AssertionIDRequestService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/AIDReqSoap/IDPRole/metaAlias/test_1"/>
        <AssertionIDRequestService Binding="urn:oasis:names:tc:SAML:2.0:bindings:URI" Location="https://platform.dev.trivir.com/am/AIDReqUri/IDPRole/metaAlias/test_1"/>
    </IDPSSODescriptor>
</EntityDescriptor>

",
}
`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22 -m forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir22/realms/alpha/realm-config/saml/hosted/testSP_SAML.json 1`] = `
{
  "config": {
    "_id": "dGVzdC1ob3N0ZWQtc3Atc2FtbA",
    "_rev": "1108584310",
    "entityId": "test-hosted-sp-saml",
    "serviceProvider": {
      "advanced": {
        "ecpConfiguration": {
          "ecpRequestIdpListFinderImpl": "com.sun.identity.saml2.plugins.ECPIDPFinder",
        },
        "idpProxy": {},
        "relayStateUrlList": {},
        "saeConfiguration": {
          "spUrl": "https://platform.dev.trivir.com/am/spsaehandler/metaAlias/test_2",
        },
      },
      "assertionContent": {
        "assertionTimeSkew": 300,
        "authenticationContext": {
          "authContextItems": [
            {
              "contextReference": "urn:oasis:names:tc:SAML:2.0:ac:classes:PasswordProtectedTransport",
              "defaultItem": true,
              "level": 0,
            },
          ],
          "authenticationComparisonType": "Exact",
          "authenticationContextMapper": "com.sun.identity.saml2.plugins.DefaultSPAuthnContextMapper",
          "includeRequestedAuthenticationContext": true,
        },
        "basicAuthentication": {},
        "clientAuthentication": {},
        "nameIdFormat": {
          "nameIdFormatList": [
            "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName",
          ],
        },
        "signingAndEncryption": {
          "encryption": {},
          "requestResponseSigning": {},
          "secretIdAndAlgorithms": {},
        },
      },
      "assertionProcessing": {
        "accountMapping": {
          "spAccountMapper": "com.sun.identity.saml2.plugins.DefaultSPAccountMapper",
          "useNameIDAsSPUserID": false,
        },
        "adapter": {
          "spAdapterScript": "69f06e63-128c-4e2f-af52-079a8a6f448b",
        },
        "attributeMapper": {
          "attributeMap": [
            {
              "key": "*",
              "value": "*",
            },
          ],
          "attributeMapper": "com.sun.identity.saml2.plugins.DefaultSPAttributeMapper",
        },
        "autoFederation": {
          "autoFedEnabled": false,
        },
        "responseArtifactMessageEncoding": {
          "encoding": "URI",
        },
        "url": {},
      },
      "services": {
        "metaAlias": "/test_2",
        "serviceAttributes": {
          "assertionConsumerService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact",
              "index": 0,
              "isDefault": true,
              "location": "https://platform.dev.trivir.com/am/Consumer/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "index": 1,
              "isDefault": false,
              "location": "https://platform.dev.trivir.com/am/Consumer/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:PAOS",
              "index": 2,
              "isDefault": false,
              "location": "https://platform.dev.trivir.com/am/Consumer/ECP/metaAlias/test_2",
            },
          ],
          "nameIdService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://platform.dev.trivir.com/am/SPMniRedirect/metaAlias/test_2",
              "responseLocation": "https://platform.dev.trivir.com/am/SPMniRedirect/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://platform.dev.trivir.com/am/SPMniPOST/metaAlias/test_2",
              "responseLocation": "https://platform.dev.trivir.com/am/SPMniPOST/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/SPMniSoap/metaAlias/test_2",
              "responseLocation": "https://platform.dev.trivir.com/am/SPMniSoap/metaAlias/test_2",
            },
          ],
          "singleLogoutService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://platform.dev.trivir.com/am/SPSloRedirect/metaAlias/test_2",
              "responseLocation": "https://platform.dev.trivir.com/am/SPSloRedirect/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://platform.dev.trivir.com/am/SPSloPOST/metaAlias/test_2",
              "responseLocation": "https://platform.dev.trivir.com/am/SPSloPOST/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/SPSloSoap/metaAlias/test_2",
            },
          ],
        },
      },
    },
  },
  "metadata": "<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<EntityDescriptor entityID="test-hosted-sp-saml" xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:query="urn:oasis:names:tc:SAML:metadata:ext:query" xmlns:mdattr="urn:oasis:names:tc:SAML:metadata:attribute" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" xmlns:xenc11="http://www.w3.org/2009/xmlenc11#" xmlns:alg="urn:oasis:names:tc:SAML:metadata:algsupport" xmlns:x509qry="urn:oasis:names:tc:SAML:metadata:X509:query" xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
    <SPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol">
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <KeyDescriptor use="encryption">
            <ds:KeyInfo>
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p">
                <ds:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
            </EncryptionMethod>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc">
                <xenc:KeySize>128</xenc:KeySize>
            </EncryptionMethod>
        </KeyDescriptor>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://platform.dev.trivir.com/am/SPSloRedirect/metaAlias/test_2" ResponseLocation="https://platform.dev.trivir.com/am/SPSloRedirect/metaAlias/test_2"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/SPSloPOST/metaAlias/test_2" ResponseLocation="https://platform.dev.trivir.com/am/SPSloPOST/metaAlias/test_2"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/SPSloSoap/metaAlias/test_2"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://platform.dev.trivir.com/am/SPMniRedirect/metaAlias/test_2" ResponseLocation="https://platform.dev.trivir.com/am/SPMniRedirect/metaAlias/test_2"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/SPMniPOST/metaAlias/test_2" ResponseLocation="https://platform.dev.trivir.com/am/SPMniPOST/metaAlias/test_2"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/SPMniSoap/metaAlias/test_2" ResponseLocation="https://platform.dev.trivir.com/am/SPMniSoap/metaAlias/test_2"/>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:persistent</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIDFormat>
        <AssertionConsumerService index="0" isDefault="true" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact" Location="https://platform.dev.trivir.com/am/Consumer/metaAlias/test_2"/>
        <AssertionConsumerService index="1" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/Consumer/metaAlias/test_2"/>
        <AssertionConsumerService index="2" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:PAOS" Location="https://platform.dev.trivir.com/am/Consumer/ECP/metaAlias/test_2"/>
    </SPSSODescriptor>
</EntityDescriptor>

",
}
`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22 -m forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir22/realms/alpha/realm-config/saml/remote/test-remote-idp-saml.json 1`] = `
{
  "config": {
    "_id": "dGVzdC1yZW1vdGUtaWRwLXNhbWw",
    "_rev": "-1198487109",
    "entityId": "test-remote-idp-saml",
    "identityProvider": {
      "assertionContent": {
        "basicAuthentication": {},
        "clientAuthentication": {},
        "nameIdFormat": {
          "nameIdFormatList": [
            "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName",
          ],
        },
        "secrets": {},
        "signingAndEncryption": {
          "encryption": {},
          "requestResponseSigning": {},
          "secretIdAndAlgorithms": {},
        },
      },
      "services": {
        "nameIdMapping": [
          {
            "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
            "location": "https://openam-trivir-demo.forgeblocks.com/am/NIMSoap/metaAlias/alpha/tester",
          },
        ],
        "serviceAttributes": {
          "artifactResolutionService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/ArtifactResolver/metaAlias/alpha/tester",
            },
          ],
          "nameIdService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPMniRedirect/metaAlias/alpha/tester",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/IDPMniRedirect/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPMniPOST/metaAlias/alpha/tester",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/IDPMniPOST/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPMniSoap/metaAlias/alpha/tester",
            },
          ],
          "singleLogoutService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPSloRedirect/metaAlias/alpha/tester",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/IDPSloRedirect/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPSloPOST/metaAlias/alpha/tester",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/IDPSloPOST/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPSloSoap/metaAlias/alpha/tester",
            },
          ],
          "singleSignOnService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SSORedirect/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SSOPOST/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SSOSoap/metaAlias/alpha/tester",
            },
          ],
        },
      },
    },
  },
  "metadata": "<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<EntityDescriptor entityID="test-remote-idp-saml" xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:query="urn:oasis:names:tc:SAML:metadata:ext:query" xmlns:mdattr="urn:oasis:names:tc:SAML:metadata:attribute" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" xmlns:xenc11="http://www.w3.org/2009/xmlenc11#" xmlns:alg="urn:oasis:names:tc:SAML:metadata:algsupport" xmlns:x509qry="urn:oasis:names:tc:SAML:metadata:X509:query" xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
    <IDPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol">
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                
                
                
                
                
                
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <KeyDescriptor use="encryption">
            <ds:KeyInfo>
                
                
                
                
                
                
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p">
                
                
                
                
                
                
                <ds:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
            </EncryptionMethod>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc">
                
                
                
                
                
                
                <xenc:KeySize>128</xenc:KeySize>
            </EncryptionMethod>
        </KeyDescriptor>
        <ArtifactResolutionService index="0" Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/ArtifactResolver/metaAlias/alpha/tester"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPSloRedirect/metaAlias/alpha/tester" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/IDPSloRedirect/metaAlias/alpha/tester"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPSloPOST/metaAlias/alpha/tester" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/IDPSloPOST/metaAlias/alpha/tester"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPSloSoap/metaAlias/alpha/tester"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPMniRedirect/metaAlias/alpha/tester" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/IDPMniRedirect/metaAlias/alpha/tester"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPMniPOST/metaAlias/alpha/tester" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/IDPMniPOST/metaAlias/alpha/tester"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPMniSoap/metaAlias/alpha/tester"/>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:persistent</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIDFormat>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://openam-trivir-demo.forgeblocks.com/am/SSORedirect/metaAlias/alpha/tester"/>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/SSOPOST/metaAlias/alpha/tester"/>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/SSOSoap/metaAlias/alpha/tester"/>
        <NameIDMappingService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/NIMSoap/metaAlias/alpha/tester"/>
        <AssertionIDRequestService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/AIDReqSoap/IDPRole/metaAlias/alpha/tester"/>
        <AssertionIDRequestService Binding="urn:oasis:names:tc:SAML:2.0:bindings:URI" Location="https://openam-trivir-demo.forgeblocks.com/am/AIDReqUri/IDPRole/metaAlias/alpha/tester"/>
    </IDPSSODescriptor>
</EntityDescriptor>

",
}
`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22 -m forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir22/realms/alpha/realm-config/saml/remote/test-remote-sp-saml.json 1`] = `
{
  "config": {
    "_id": "dGVzdC1yZW1vdGUtc3Atc2FtbA",
    "_rev": "302709081",
    "entityId": "test-remote-sp-saml",
    "serviceProvider": {
      "advanced": {
        "idpProxy": {},
        "saeConfiguration": {},
        "treeConfiguration": {},
      },
      "assertionContent": {
        "basicAuthentication": {},
        "nameIdFormat": {
          "nameIdFormatList": [
            "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName",
          ],
        },
        "secrets": {},
        "signingAndEncryption": {
          "encryption": {},
          "requestResponseSigning": {},
          "secretIdAndAlgorithms": {},
        },
      },
      "assertionProcessing": {
        "accountMapper": {},
        "attributeMapper": {},
        "responseArtifactMessageEncoding": {},
      },
      "services": {
        "serviceAttributes": {
          "assertionConsumerService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact",
              "index": 0,
              "isDefault": true,
              "location": "https://openam-trivir-demo.forgeblocks.com/am/Consumer/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "index": 1,
              "isDefault": false,
              "location": "https://openam-trivir-demo.forgeblocks.com/am/Consumer/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:PAOS",
              "index": 2,
              "isDefault": false,
              "location": "https://openam-trivir-demo.forgeblocks.com/am/Consumer/ECP/metaAlias/alpha/test-user",
            },
          ],
          "nameIdService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPMniRedirect/metaAlias/alpha/test-user",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/SPMniRedirect/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPMniPOST/metaAlias/alpha/test-user",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/SPMniPOST/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPMniSoap/metaAlias/alpha/test-user",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/SPMniSoap/metaAlias/alpha/test-user",
            },
          ],
          "singleLogoutService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPSloRedirect/metaAlias/alpha/test-user",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/SPSloRedirect/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPSloPOST/metaAlias/alpha/test-user",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/SPSloPOST/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPSloSoap/metaAlias/alpha/test-user",
            },
          ],
        },
      },
    },
  },
  "metadata": "<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<EntityDescriptor entityID="test-remote-sp-saml" xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:query="urn:oasis:names:tc:SAML:metadata:ext:query" xmlns:mdattr="urn:oasis:names:tc:SAML:metadata:attribute" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" xmlns:xenc11="http://www.w3.org/2009/xmlenc11#" xmlns:alg="urn:oasis:names:tc:SAML:metadata:algsupport" xmlns:x509qry="urn:oasis:names:tc:SAML:metadata:X509:query" xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
    <SPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol">
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                
                
                
                
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <KeyDescriptor use="encryption">
            <ds:KeyInfo>
                
                
                
                
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p">
                
                
                
                
                <ds:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
            </EncryptionMethod>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc">
                
                
                
                
                <xenc:KeySize>128</xenc:KeySize>
            </EncryptionMethod>
        </KeyDescriptor>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://openam-trivir-demo.forgeblocks.com/am/SPSloRedirect/metaAlias/alpha/test-user" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/SPSloRedirect/metaAlias/alpha/test-user"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/SPSloPOST/metaAlias/alpha/test-user" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/SPSloPOST/metaAlias/alpha/test-user"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/SPSloSoap/metaAlias/alpha/test-user"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://openam-trivir-demo.forgeblocks.com/am/SPMniRedirect/metaAlias/alpha/test-user" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/SPMniRedirect/metaAlias/alpha/test-user"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/SPMniPOST/metaAlias/alpha/test-user" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/SPMniPOST/metaAlias/alpha/test-user"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/SPMniSoap/metaAlias/alpha/test-user" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/SPMniSoap/metaAlias/alpha/test-user"/>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:persistent</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIDFormat>
        <AssertionConsumerService index="0" isDefault="true" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact" Location="https://openam-trivir-demo.forgeblocks.com/am/Consumer/metaAlias/alpha/test-user"/>
        <AssertionConsumerService index="1" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/Consumer/metaAlias/alpha/test-user"/>
        <AssertionConsumerService index="2" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:PAOS" Location="https://openam-trivir-demo.forgeblocks.com/am/Consumer/ECP/metaAlias/alpha/test-user"/>
    </SPSSODescriptor>
</EntityDescriptor>

",
}
`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir23 --type forgeops": should export the saml based on salm-config.json file in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir23 --type forgeops": should export the saml based on salm-config.json file in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir23 --type forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir23/realms/alpha/realm-config/saml/COT/Cloud2ForgeOps.json 1`] = `
{
  "_id": "Cloud2ForgeOps",
  "_rev": "1091112919",
  "_type": {
    "_id": "circlesoftrust",
    "collection": true,
    "name": "Circle of Trust",
  },
  "status": "active",
  "trustedProviders": [
    "test-remote-idp-saml|saml2",
    "test-hosted-sp-saml|saml2",
  ],
}
`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir23 --type forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir23/realms/alpha/realm-config/saml/COT/ForgeOps2Cloud.json 1`] = `
{
  "_id": "ForgeOps2Cloud",
  "_rev": "1119518363",
  "_type": {
    "_id": "circlesoftrust",
    "collection": true,
    "name": "Circle of Trust",
  },
  "status": "active",
  "trustedProviders": [
    "test-remote-sp-saml|saml2",
    "test-hosted-idp-saml|saml2",
  ],
}
`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir23 --type forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir23/realms/alpha/realm-config/saml/hosted/testIDP_SAML.json 1`] = `
{
  "config": {
    "_id": "dGVzdC1ob3N0ZWQtaWRwLXNhbWw",
    "_rev": "-187419486",
    "entityId": "test-hosted-idp-saml",
    "identityProvider": {
      "advanced": {
        "ecpConfiguration": {
          "idpSessionMapper": "com.sun.identity.saml2.plugins.DefaultIDPECPSessionMapper",
        },
        "idpAdapter": {
          "idpAdapterScript": "[Empty]",
        },
        "idpFinderImplementation": {},
        "relayStateUrlList": {},
        "saeConfiguration": {
          "idpUrl": "https://platform.dev.trivir.com/am/idpsaehandler/metaAlias/test_1",
        },
        "sessionSynchronization": {},
      },
      "assertionContent": {
        "assertionCache": {},
        "assertionTime": {
          "effectiveTime": 600,
          "notBeforeTimeSkew": 600,
        },
        "authenticationContext": {
          "authContextItems": [
            {
              "contextReference": "urn:oasis:names:tc:SAML:2.0:ac:classes:PasswordProtectedTransport",
              "level": 0,
            },
          ],
          "authenticationContextMapper": "com.sun.identity.saml2.plugins.DefaultIDPAuthnContextMapper",
        },
        "basicAuthentication": {},
        "nameIdFormat": {
          "nameIdFormatList": [
            "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName",
          ],
          "nameIdValueMap": [
            {
              "binary": false,
              "key": "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
              "value": "mail",
            },
          ],
        },
        "signingAndEncryption": {
          "encryption": {},
          "requestResponseSigning": {},
          "secretIdAndAlgorithms": {},
        },
      },
      "assertionProcessing": {
        "accountMapper": {
          "accountMapper": "com.sun.identity.saml2.plugins.DefaultIDPAccountMapper",
          "disableNameIdPersistence": false,
        },
        "attributeMapper": {
          "attributeMapper": "com.sun.identity.saml2.plugins.DefaultIDPAttributeMapper",
          "attributeMapperScript": "c4f22465-2368-4e27-8013-e6399974fd48",
        },
        "localConfiguration": {},
      },
      "services": {
        "assertionIdRequest": [
          {
            "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
            "location": "https://platform.dev.trivir.com/am/AIDReqSoap/IDPRole/metaAlias/test_1",
          },
          {
            "binding": "urn:oasis:names:tc:SAML:2.0:bindings:URI",
            "location": "https://platform.dev.trivir.com/am/AIDReqUri/IDPRole/metaAlias/test_1",
          },
        ],
        "metaAlias": "/test_1",
        "nameIdMapping": [
          {
            "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
            "location": "https://platform.dev.trivir.com/am/NIMSoap/metaAlias/test_1",
          },
        ],
        "serviceAttributes": {
          "artifactResolutionService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/ArtifactResolver/metaAlias/test_1",
            },
          ],
          "nameIdService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://platform.dev.trivir.com/am/IDPMniRedirect/metaAlias/test_1",
              "responseLocation": "https://platform.dev.trivir.com/am/IDPMniRedirect/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://platform.dev.trivir.com/am/IDPMniPOST/metaAlias/test_1",
              "responseLocation": "https://platform.dev.trivir.com/am/IDPMniPOST/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/IDPMniSoap/metaAlias/test_1",
            },
          ],
          "singleLogoutService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://platform.dev.trivir.com/am/IDPSloRedirect/metaAlias/test_1",
              "responseLocation": "https://platform.dev.trivir.com/am/IDPSloRedirect/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://platform.dev.trivir.com/am/IDPSloPOST/metaAlias/test_1",
              "responseLocation": "https://platform.dev.trivir.com/am/IDPSloPOST/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/IDPSloSoap/metaAlias/test_1",
            },
          ],
          "singleSignOnService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://platform.dev.trivir.com/am/SSORedirect/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://platform.dev.trivir.com/am/SSOPOST/metaAlias/test_1",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/SSOSoap/metaAlias/test_1",
            },
          ],
        },
      },
    },
  },
  "metadata": "<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<EntityDescriptor entityID="test-hosted-idp-saml" xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:query="urn:oasis:names:tc:SAML:metadata:ext:query" xmlns:mdattr="urn:oasis:names:tc:SAML:metadata:attribute" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" xmlns:xenc11="http://www.w3.org/2009/xmlenc11#" xmlns:alg="urn:oasis:names:tc:SAML:metadata:algsupport" xmlns:x509qry="urn:oasis:names:tc:SAML:metadata:X509:query" xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
    <IDPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol">
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <KeyDescriptor use="encryption">
            <ds:KeyInfo>
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p">
                <ds:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
            </EncryptionMethod>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc">
                <xenc:KeySize>128</xenc:KeySize>
            </EncryptionMethod>
        </KeyDescriptor>
        <ArtifactResolutionService index="0" Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/ArtifactResolver/metaAlias/test_1"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://platform.dev.trivir.com/am/IDPSloRedirect/metaAlias/test_1" ResponseLocation="https://platform.dev.trivir.com/am/IDPSloRedirect/metaAlias/test_1"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/IDPSloPOST/metaAlias/test_1" ResponseLocation="https://platform.dev.trivir.com/am/IDPSloPOST/metaAlias/test_1"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/IDPSloSoap/metaAlias/test_1"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://platform.dev.trivir.com/am/IDPMniRedirect/metaAlias/test_1" ResponseLocation="https://platform.dev.trivir.com/am/IDPMniRedirect/metaAlias/test_1"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/IDPMniPOST/metaAlias/test_1" ResponseLocation="https://platform.dev.trivir.com/am/IDPMniPOST/metaAlias/test_1"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/IDPMniSoap/metaAlias/test_1"/>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:persistent</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIDFormat>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://platform.dev.trivir.com/am/SSORedirect/metaAlias/test_1"/>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/SSOPOST/metaAlias/test_1"/>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/SSOSoap/metaAlias/test_1"/>
        <NameIDMappingService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/NIMSoap/metaAlias/test_1"/>
        <AssertionIDRequestService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/AIDReqSoap/IDPRole/metaAlias/test_1"/>
        <AssertionIDRequestService Binding="urn:oasis:names:tc:SAML:2.0:bindings:URI" Location="https://platform.dev.trivir.com/am/AIDReqUri/IDPRole/metaAlias/test_1"/>
    </IDPSSODescriptor>
</EntityDescriptor>

",
}
`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir23 --type forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir23/realms/alpha/realm-config/saml/hosted/testSP_SAML.json 1`] = `
{
  "config": {
    "_id": "dGVzdC1ob3N0ZWQtc3Atc2FtbA",
    "_rev": "1108584310",
    "entityId": "test-hosted-sp-saml",
    "serviceProvider": {
      "advanced": {
        "ecpConfiguration": {
          "ecpRequestIdpListFinderImpl": "com.sun.identity.saml2.plugins.ECPIDPFinder",
        },
        "idpProxy": {},
        "relayStateUrlList": {},
        "saeConfiguration": {
          "spUrl": "https://platform.dev.trivir.com/am/spsaehandler/metaAlias/test_2",
        },
      },
      "assertionContent": {
        "assertionTimeSkew": 300,
        "authenticationContext": {
          "authContextItems": [
            {
              "contextReference": "urn:oasis:names:tc:SAML:2.0:ac:classes:PasswordProtectedTransport",
              "defaultItem": true,
              "level": 0,
            },
          ],
          "authenticationComparisonType": "Exact",
          "authenticationContextMapper": "com.sun.identity.saml2.plugins.DefaultSPAuthnContextMapper",
          "includeRequestedAuthenticationContext": true,
        },
        "basicAuthentication": {},
        "clientAuthentication": {},
        "nameIdFormat": {
          "nameIdFormatList": [
            "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName",
          ],
        },
        "signingAndEncryption": {
          "encryption": {},
          "requestResponseSigning": {},
          "secretIdAndAlgorithms": {},
        },
      },
      "assertionProcessing": {
        "accountMapping": {
          "spAccountMapper": "com.sun.identity.saml2.plugins.DefaultSPAccountMapper",
          "useNameIDAsSPUserID": false,
        },
        "adapter": {
          "spAdapterScript": "69f06e63-128c-4e2f-af52-079a8a6f448b",
        },
        "attributeMapper": {
          "attributeMap": [
            {
              "key": "*",
              "value": "*",
            },
          ],
          "attributeMapper": "com.sun.identity.saml2.plugins.DefaultSPAttributeMapper",
        },
        "autoFederation": {
          "autoFedEnabled": false,
        },
        "responseArtifactMessageEncoding": {
          "encoding": "URI",
        },
        "url": {},
      },
      "services": {
        "metaAlias": "/test_2",
        "serviceAttributes": {
          "assertionConsumerService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact",
              "index": 0,
              "isDefault": true,
              "location": "https://platform.dev.trivir.com/am/Consumer/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "index": 1,
              "isDefault": false,
              "location": "https://platform.dev.trivir.com/am/Consumer/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:PAOS",
              "index": 2,
              "isDefault": false,
              "location": "https://platform.dev.trivir.com/am/Consumer/ECP/metaAlias/test_2",
            },
          ],
          "nameIdService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://platform.dev.trivir.com/am/SPMniRedirect/metaAlias/test_2",
              "responseLocation": "https://platform.dev.trivir.com/am/SPMniRedirect/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://platform.dev.trivir.com/am/SPMniPOST/metaAlias/test_2",
              "responseLocation": "https://platform.dev.trivir.com/am/SPMniPOST/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/SPMniSoap/metaAlias/test_2",
              "responseLocation": "https://platform.dev.trivir.com/am/SPMniSoap/metaAlias/test_2",
            },
          ],
          "singleLogoutService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://platform.dev.trivir.com/am/SPSloRedirect/metaAlias/test_2",
              "responseLocation": "https://platform.dev.trivir.com/am/SPSloRedirect/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://platform.dev.trivir.com/am/SPSloPOST/metaAlias/test_2",
              "responseLocation": "https://platform.dev.trivir.com/am/SPSloPOST/metaAlias/test_2",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://platform.dev.trivir.com/am/SPSloSoap/metaAlias/test_2",
            },
          ],
        },
      },
    },
  },
  "metadata": "<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<EntityDescriptor entityID="test-hosted-sp-saml" xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:query="urn:oasis:names:tc:SAML:metadata:ext:query" xmlns:mdattr="urn:oasis:names:tc:SAML:metadata:attribute" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" xmlns:xenc11="http://www.w3.org/2009/xmlenc11#" xmlns:alg="urn:oasis:names:tc:SAML:metadata:algsupport" xmlns:x509qry="urn:oasis:names:tc:SAML:metadata:X509:query" xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
    <SPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol">
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <KeyDescriptor use="encryption">
            <ds:KeyInfo>
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p">
                <ds:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
            </EncryptionMethod>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc">
                <xenc:KeySize>128</xenc:KeySize>
            </EncryptionMethod>
        </KeyDescriptor>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://platform.dev.trivir.com/am/SPSloRedirect/metaAlias/test_2" ResponseLocation="https://platform.dev.trivir.com/am/SPSloRedirect/metaAlias/test_2"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/SPSloPOST/metaAlias/test_2" ResponseLocation="https://platform.dev.trivir.com/am/SPSloPOST/metaAlias/test_2"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/SPSloSoap/metaAlias/test_2"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://platform.dev.trivir.com/am/SPMniRedirect/metaAlias/test_2" ResponseLocation="https://platform.dev.trivir.com/am/SPMniRedirect/metaAlias/test_2"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/SPMniPOST/metaAlias/test_2" ResponseLocation="https://platform.dev.trivir.com/am/SPMniPOST/metaAlias/test_2"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://platform.dev.trivir.com/am/SPMniSoap/metaAlias/test_2" ResponseLocation="https://platform.dev.trivir.com/am/SPMniSoap/metaAlias/test_2"/>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:persistent</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIDFormat>
        <AssertionConsumerService index="0" isDefault="true" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact" Location="https://platform.dev.trivir.com/am/Consumer/metaAlias/test_2"/>
        <AssertionConsumerService index="1" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://platform.dev.trivir.com/am/Consumer/metaAlias/test_2"/>
        <AssertionConsumerService index="2" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:PAOS" Location="https://platform.dev.trivir.com/am/Consumer/ECP/metaAlias/test_2"/>
    </SPSSODescriptor>
</EntityDescriptor>

",
}
`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir23 --type forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir23/realms/alpha/realm-config/saml/remote/test-remote-idp-saml.json 1`] = `
{
  "config": {
    "_id": "dGVzdC1yZW1vdGUtaWRwLXNhbWw",
    "_rev": "-1198487109",
    "entityId": "test-remote-idp-saml",
    "identityProvider": {
      "assertionContent": {
        "basicAuthentication": {},
        "clientAuthentication": {},
        "nameIdFormat": {
          "nameIdFormatList": [
            "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName",
          ],
        },
        "secrets": {},
        "signingAndEncryption": {
          "encryption": {},
          "requestResponseSigning": {},
          "secretIdAndAlgorithms": {},
        },
      },
      "services": {
        "nameIdMapping": [
          {
            "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
            "location": "https://openam-trivir-demo.forgeblocks.com/am/NIMSoap/metaAlias/alpha/tester",
          },
        ],
        "serviceAttributes": {
          "artifactResolutionService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/ArtifactResolver/metaAlias/alpha/tester",
            },
          ],
          "nameIdService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPMniRedirect/metaAlias/alpha/tester",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/IDPMniRedirect/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPMniPOST/metaAlias/alpha/tester",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/IDPMniPOST/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPMniSoap/metaAlias/alpha/tester",
            },
          ],
          "singleLogoutService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPSloRedirect/metaAlias/alpha/tester",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/IDPSloRedirect/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPSloPOST/metaAlias/alpha/tester",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/IDPSloPOST/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/IDPSloSoap/metaAlias/alpha/tester",
            },
          ],
          "singleSignOnService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SSORedirect/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SSOPOST/metaAlias/alpha/tester",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SSOSoap/metaAlias/alpha/tester",
            },
          ],
        },
      },
    },
  },
  "metadata": "<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<EntityDescriptor entityID="test-remote-idp-saml" xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:query="urn:oasis:names:tc:SAML:metadata:ext:query" xmlns:mdattr="urn:oasis:names:tc:SAML:metadata:attribute" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" xmlns:xenc11="http://www.w3.org/2009/xmlenc11#" xmlns:alg="urn:oasis:names:tc:SAML:metadata:algsupport" xmlns:x509qry="urn:oasis:names:tc:SAML:metadata:X509:query" xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
    <IDPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol">
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                
                
                
                
                
                
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <KeyDescriptor use="encryption">
            <ds:KeyInfo>
                
                
                
                
                
                
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p">
                
                
                
                
                
                
                <ds:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
            </EncryptionMethod>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc">
                
                
                
                
                
                
                <xenc:KeySize>128</xenc:KeySize>
            </EncryptionMethod>
        </KeyDescriptor>
        <ArtifactResolutionService index="0" Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/ArtifactResolver/metaAlias/alpha/tester"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPSloRedirect/metaAlias/alpha/tester" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/IDPSloRedirect/metaAlias/alpha/tester"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPSloPOST/metaAlias/alpha/tester" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/IDPSloPOST/metaAlias/alpha/tester"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPSloSoap/metaAlias/alpha/tester"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPMniRedirect/metaAlias/alpha/tester" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/IDPMniRedirect/metaAlias/alpha/tester"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPMniPOST/metaAlias/alpha/tester" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/IDPMniPOST/metaAlias/alpha/tester"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/IDPMniSoap/metaAlias/alpha/tester"/>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:persistent</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIDFormat>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://openam-trivir-demo.forgeblocks.com/am/SSORedirect/metaAlias/alpha/tester"/>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/SSOPOST/metaAlias/alpha/tester"/>
        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/SSOSoap/metaAlias/alpha/tester"/>
        <NameIDMappingService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/NIMSoap/metaAlias/alpha/tester"/>
        <AssertionIDRequestService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/AIDReqSoap/IDPRole/metaAlias/alpha/tester"/>
        <AssertionIDRequestService Binding="urn:oasis:names:tc:SAML:2.0:bindings:URI" Location="https://openam-trivir-demo.forgeblocks.com/am/AIDReqUri/IDPRole/metaAlias/alpha/tester"/>
    </IDPSSODescriptor>
</EntityDescriptor>

",
}
`;

exports[`frodo config-manager pull saml "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir23 --type forgeops": should export the saml based on salm-config.json file in fr-config-manager style": testDir23/realms/alpha/realm-config/saml/remote/test-remote-sp-saml.json 1`] = `
{
  "config": {
    "_id": "dGVzdC1yZW1vdGUtc3Atc2FtbA",
    "_rev": "302709081",
    "entityId": "test-remote-sp-saml",
    "serviceProvider": {
      "advanced": {
        "idpProxy": {},
        "saeConfiguration": {},
        "treeConfiguration": {},
      },
      "assertionContent": {
        "basicAuthentication": {},
        "nameIdFormat": {
          "nameIdFormatList": [
            "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName",
          ],
        },
        "secrets": {},
        "signingAndEncryption": {
          "encryption": {},
          "requestResponseSigning": {},
          "secretIdAndAlgorithms": {},
        },
      },
      "assertionProcessing": {
        "accountMapper": {},
        "attributeMapper": {},
        "responseArtifactMessageEncoding": {},
      },
      "services": {
        "serviceAttributes": {
          "assertionConsumerService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact",
              "index": 0,
              "isDefault": true,
              "location": "https://openam-trivir-demo.forgeblocks.com/am/Consumer/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "index": 1,
              "isDefault": false,
              "location": "https://openam-trivir-demo.forgeblocks.com/am/Consumer/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:PAOS",
              "index": 2,
              "isDefault": false,
              "location": "https://openam-trivir-demo.forgeblocks.com/am/Consumer/ECP/metaAlias/alpha/test-user",
            },
          ],
          "nameIdService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPMniRedirect/metaAlias/alpha/test-user",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/SPMniRedirect/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPMniPOST/metaAlias/alpha/test-user",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/SPMniPOST/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPMniSoap/metaAlias/alpha/test-user",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/SPMniSoap/metaAlias/alpha/test-user",
            },
          ],
          "singleLogoutService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPSloRedirect/metaAlias/alpha/test-user",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/SPSloRedirect/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPSloPOST/metaAlias/alpha/test-user",
              "responseLocation": "https://openam-trivir-demo.forgeblocks.com/am/SPSloPOST/metaAlias/alpha/test-user",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "https://openam-trivir-demo.forgeblocks.com/am/SPSloSoap/metaAlias/alpha/test-user",
            },
          ],
        },
      },
    },
  },
  "metadata": "<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<EntityDescriptor entityID="test-remote-sp-saml" xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:query="urn:oasis:names:tc:SAML:metadata:ext:query" xmlns:mdattr="urn:oasis:names:tc:SAML:metadata:attribute" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" xmlns:xenc11="http://www.w3.org/2009/xmlenc11#" xmlns:alg="urn:oasis:names:tc:SAML:metadata:algsupport" xmlns:x509qry="urn:oasis:names:tc:SAML:metadata:X509:query" xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
    <SPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol">
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                
                
                
                
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <KeyDescriptor use="encryption">
            <ds:KeyInfo>
                
                
                
                
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p">
                
                
                
                
                <ds:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
            </EncryptionMethod>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc">
                
                
                
                
                <xenc:KeySize>128</xenc:KeySize>
            </EncryptionMethod>
        </KeyDescriptor>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://openam-trivir-demo.forgeblocks.com/am/SPSloRedirect/metaAlias/alpha/test-user" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/SPSloRedirect/metaAlias/alpha/test-user"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/SPSloPOST/metaAlias/alpha/test-user" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/SPSloPOST/metaAlias/alpha/test-user"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/SPSloSoap/metaAlias/alpha/test-user"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://openam-trivir-demo.forgeblocks.com/am/SPMniRedirect/metaAlias/alpha/test-user" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/SPMniRedirect/metaAlias/alpha/test-user"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/SPMniPOST/metaAlias/alpha/test-user" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/SPMniPOST/metaAlias/alpha/test-user"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://openam-trivir-demo.forgeblocks.com/am/SPMniSoap/metaAlias/alpha/test-user" ResponseLocation="https://openam-trivir-demo.forgeblocks.com/am/SPMniSoap/metaAlias/alpha/test-user"/>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:persistent</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIDFormat>
        <AssertionConsumerService index="0" isDefault="true" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact" Location="https://openam-trivir-demo.forgeblocks.com/am/Consumer/metaAlias/alpha/test-user"/>
        <AssertionConsumerService index="1" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://openam-trivir-demo.forgeblocks.com/am/Consumer/metaAlias/alpha/test-user"/>
        <AssertionConsumerService index="2" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:PAOS" Location="https://openam-trivir-demo.forgeblocks.com/am/Consumer/ECP/metaAlias/alpha/test-user"/>
    </SPSSODescriptor>
</EntityDescriptor>

",
}
`;
